Fix gps_joystick and link nagram x

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11435,7 +11435,7 @@
 	<item component="ComponentInfo{com.tharunbirla.fetchit/com.tharunbirla.fetchit.MainActivity}" drawable="fetchit" />
 	<item component="ComponentInfo{com.thatsmanmeet.clipboardcleaner/com.thatsmanmeet.clipboardcleaner.MainActivity}" drawable="clipboard_cleaner" />
 	<item component="ComponentInfo{com.thatsmanmeet.taskyapp/com.thatsmanmeet.taskyapp.MainActivity}" drawable="tasky" />
-	<item component="ComponentInfo{com.theappninjas.fakegpsjoystick/com.theappninjas.fakegpsjoystick.ui.main.MainActivityv}" drawable="gps_joystick" />
+	<item component="ComponentInfo{com.theappninjas.fakegpsjoystick/com.theappninjas.fakegpsjoystick.ui.main.MainActivity}" drawable="gps_joystick" />
 	<item component="ComponentInfo{com.theathletic/com.theathletic.activity.SplashActivity}" drawable="the_athletic" />
 	<item component="ComponentInfo{com.thebrokenrail.combustible/com.thebrokenrail.combustible.activity.feed.post.PostFeedActivity}" drawable="combustible" />
 	<item component="ComponentInfo{com.thebudgetingapp.thebudgetingapp/com.thebudgetingapp.thebudgetingapp.MainActivity}" drawable="the_budgeting_app" />
