--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -5,6 +5,7 @@
 
 	<category title="New" />
 	<item drawable="carbitlink" />
+	<item drawable="echo" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -201,6 +202,7 @@
 	<item drawable="easter_eggs_alt_2" />
 	<item drawable="ebay_kleinanzeigen_alt_1" />
 	<item drawable="echo_alt_1" />
+	<item drawable="echo_alt_2" />
 	<item drawable="ecosia_alt_1" />
 	<item drawable="edem_rf_alt_1" />
 	<item drawable="edem_rf_alt_2" />
