move FNF to Alt 1

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -553,6 +553,7 @@
 	<item drawable="fossify_voice_recorder_yellow" />
 	<item drawable="fotmob_alt_1" />
 	<item drawable="freezer_alt_1" />
+	<item drawable="friday_night_funkin_alt_1" />
 	<item drawable="frost_for_facebook_alt_1" />
 	<item drawable="frost_for_facebook_alt_2" />
 	<item drawable="funimationnow_alt_1" />
@@ -5803,7 +5804,6 @@
 	<item drawable="freshdesk" />
 	<item drawable="freshrss" />
 	<item drawable="fretello" />
-	<item drawable="friday_night_funkin" />
 	<item drawable="friend_chat_around" />
 	<item drawable="friendiqa" />
 	<item drawable="friendly" />
