--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -44,6 +44,7 @@
 	<item drawable="void_for_jellyfin" />
 	<item drawable="wifi_audio_streaming" />
 	<item drawable="your_news" />
+	<item drawable="flare" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -273,6 +274,7 @@
 	<item drawable="firefox_focus_alt_3" />
 	<item drawable="firefox_focus_alt_4" />
 	<item drawable="firefox_nightly_alt_1" />
+	<item drawable="flare_alt_1" />
 	<item drawable="flashscore_alt_1" />
 	<item drawable="flixbus_alt_1" />
 	<item drawable="flow_alt_1" />
