--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -24,7 +24,7 @@
 	<item drawable="marriott_bonvoy" />
 	<item drawable="maytag" />
 	<item drawable="meow_tower" />
-	<item drawable="mexican_train" />
+	<item drawable="mexican_train_alt_1" />
 	<item drawable="midfirst" />
 	<item drawable="nf_radar" />
 	<item drawable="notification_log" />
@@ -729,6 +729,7 @@
 	<item drawable="messenger_kids_alt_1" />
 	<item drawable="messenger_lite_alt_1" />
 	<item drawable="metrolist_alt_1" />
+	<item drawable="mexican_train_alt_1" />
 	<item drawable="mi_argentina_alt_1" />
 	<item drawable="mi_movistar_alt_1" />
 	<item drawable="mi_security_alt_1" />
@@ -7890,7 +7891,6 @@
 	<item drawable="meu_tim" />
 	<item drawable="meu_vivo" />
 	<item drawable="meu_vivo_fixo" />
-	<item drawable="mexican_train" />
 	<item drawable="mfine" />
 	<item drawable="mgit" />
 	<item drawable="mgts" />
