--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -10,6 +10,9 @@
 	<item drawable="onepass" />
 	<item drawable="sinara" />
 	<item drawable="vk_video_live" />
+	<item drawable="nothing_gallery" />
+	<item drawable="nothing_recorder" />
+	<item drawable="nothing_weather" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -784,8 +787,11 @@
 	<item drawable="no_icon_alt_1" />
 	<item drawable="notally_alt_1" />
 	<item drawable="notesnook_alt_1" />
+	<item drawable="nothing_gallery_alt_1" />
 	<item drawable="nothing_glyphify_alt_1" />
+	<item drawable="nothing_recorder_alt_1" />
 	<item drawable="nothing_weather_alt_1" />
+	<item drawable="nothing_weather_alt_2" />
 	<item drawable="notify_for_smartwatches_alt_1" />
 	<item drawable="noto_airplane" />
 	<item drawable="noto_alt_1" />
