Fix pachli componentinfo

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -361,6 +361,7 @@
 	<item component="ComponentInfo{app.organicmaps/com.mapswithme.maps.DownloadResourcesActivity}" drawable="organic_maps" />
 	<item component="ComponentInfo{app.osumatrix.hzrefresher/app.osumatrix.hzrefresher.MainActivity}" drawable="hz_refresher" />
 	<item component="ComponentInfo{app.pachli/app.pachli.SplashActivity}" drawable="pachli" />
+	<item component="ComponentInfo{app.pachli/app.pachli.feature.intentrouter.IntentRouterActivity}" drawable="pachli" />
 	<item component="ComponentInfo{app.paralino.android/app.paralino.android.ui.main.MainActivity}" drawable="paralino" />
 	<item component="ComponentInfo{app.phantom/app.phantom.MainActivity}" drawable="phantom" />
 	<item component="ComponentInfo{app.pomodorot/com.godot.game.GodotApp}" drawable="pomodorot" />
