--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -55,6 +55,7 @@
 	<item drawable="vk_video_live" />
 	<item drawable="vybe" />
 	<item drawable="waltermart" />
+	<item drawable="ente_auth" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -259,6 +260,7 @@
 	<item drawable="edusign_intervenant_alt_1" />
 	<item drawable="elements_kwgt_alt_1" />
 	<item drawable="ente_auth_alt_1" />
+	<item drawable="ente_auth_alt_2" />
 	<item drawable="ente_dark" />
 	<item drawable="ente_light" />
 	<item drawable="ente_og" />
