--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -56,6 +56,8 @@
 	<item drawable="vybe" />
 	<item drawable="waltermart" />
 	<item drawable="ente_auth" />
+	<item drawable="revolut" />
+	<item drawable="revolut_junior" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -966,6 +968,8 @@
 	<item drawable="remnote_alt_1" />
 	<item drawable="retro_music_player_alt_1" />
 	<item drawable="revanced_manager_alt_1" />
+	<item drawable="revolut_alt_1" />
+	<item drawable="revolut_junior_alt_1" />
 	<item drawable="revue_starlight_re_live_alt_1" />
 	<item drawable="right_gallery_alt_1" />
 	<item drawable="rikkahub_alt_1" />
