--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -55,6 +55,9 @@
 	<item drawable="vk_video_live" />
 	<item drawable="vybe" />
 	<item drawable="waltermart" />
+	<item drawable="ente_auth" />
+	<item drawable="revolut" />
+	<item drawable="revolut_junior" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -259,6 +262,7 @@
 	<item drawable="edusign_intervenant_alt_1" />
 	<item drawable="elements_kwgt_alt_1" />
 	<item drawable="ente_auth_alt_1" />
+	<item drawable="ente_auth_alt_2" />
 	<item drawable="ente_dark" />
 	<item drawable="ente_light" />
 	<item drawable="ente_og" />
@@ -964,6 +968,8 @@
 	<item drawable="remnote_alt_1" />
 	<item drawable="retro_music_player_alt_1" />
 	<item drawable="revanced_manager_alt_1" />
+	<item drawable="revolut_alt_1" />
+	<item drawable="revolut_junior_alt_1" />
 	<item drawable="revue_starlight_re_live_alt_1" />
 	<item drawable="right_gallery_alt_1" />
 	<item drawable="rikkahub_alt_1" />
