--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -58,6 +58,7 @@
 	<item drawable="ente_auth" />
 	<item drawable="revolut" />
 	<item drawable="revolut_junior" />
+	<item drawable="headspace" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -643,6 +644,7 @@
 	<item drawable="halma_alt_1" />
 	<item drawable="hannaford_alt_1" />
 	<item drawable="harmonoid_alt_1" />
+	<item drawable="headspace_alt_1" />
 	<item drawable="hermit_alt_1" />
 	<item drawable="hevy_alt_1" />
 	<item drawable="hlb_connect_alt_1" />
