fix/update icons

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -890,6 +890,7 @@
 	<item drawable="portuguese_dictionary_offline_alt_1" />
 	<item drawable="postbank_alt_1" />
 	<item drawable="poste_italiane_alt_1" />
+	<item drawable="pou_3d_alt_1" />
 	<item drawable="powerup_alt_1" />
 	<item drawable="ppsspp_alt_1" />
 	<item drawable="premier_league_alt_1" />
@@ -1438,6 +1439,7 @@
 	<item drawable="todoist_tangerine" />
 	<item drawable="tooly_alt_1" />
 	<item drawable="torrent_search_alt_1" />
+	<item drawable="touchscreen_dead_pixels_repair_alt_1" />
 	<item drawable="tower_of_fantasy_alt_1" />
 	<item drawable="traewelldroid_alt_1" />
 	<item drawable="transit_alt" />
@@ -9842,7 +9844,6 @@
 	<item drawable="pot_droid" />
 	<item drawable="pou" />
 	<item drawable="pou_3d" />
-	<item drawable="pou_3d_alt" />
 	<item drawable="povo_2" />
 	<item drawable="power_ampache_2" />
 	<item drawable="power_button_remapper" />
