--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -15,6 +15,7 @@
 	<item drawable="mexc" />
 	<item drawable="morphe_manager" />
 	<item drawable="only_mods_world" />
+	<item drawable="pilates_down_dog" />
 	<item drawable="starship" />
 	<item drawable="starz" />
 	<item drawable="youtube_morphe" />
@@ -9621,6 +9622,7 @@
 	<item drawable="pikmin_bloom" />
 	<item drawable="pikpak" />
 	<item drawable="piktures" />
+	<item drawable="pilates_down_dog" />
 	<item drawable="piley" />
 	<item drawable="pilipala" />
 	<item drawable="pilipalax" />
