Update Saber icon

--- a/app/src/main/res/xml/contributors.xml
+++ b/app/src/main/res/xml/contributors.xml
@@ -430,4 +430,9 @@
         contribution="Testing"
         image=""
         link="" />
+    <contributor
+        name="adil192"
+        contribution="Icons"
+        image="https://avatars.githubusercontent.com/u/21128619"
+        link="https://github.com/adil192" />
 </resources>
