--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -4270,7 +4270,7 @@
 	<item component="ComponentInfo{com.ebay.mobile/com.ebay.mobile.activities.MainActivity}" drawable="ebay" />
 	<item component="ComponentInfo{com.ebay.mobile/com.ebay.mobile.activities.eBay}" drawable="ebay" />
 	<item component="ComponentInfo{com.ebay.mobile/com.ebay.mobile.home.impl.main.MainActivity}" drawable="ebay" />
-	<item component="ComponentInfo{com.eblan.launcher/com.eblan.launcher.activity.MainActivity}" drawable="eblan_launcher" />
+	<item component="ComponentInfo{com.eblan.launcher/com.eblan.launcher.activity.MainActivity}" drawable="einstein_launcher" />
 	<item component="ComponentInfo{com.ecidadao.saude/crc64016b7bd4896e8d5e.MainActivity}" drawable="e_cidadao_saude" />
 	<item component="ComponentInfo{com.eclipsim.gpsstatus2/com.eclipsim.gpsstatus2.GPSStatus}" drawable="gps_status" />
 	<item component="ComponentInfo{com.eco.global.app/com.eco.main.activity.EcoLauncherActivity}" drawable="ecovacs_home" />
