--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -5171,7 +5171,6 @@
 	<item drawable="ebay_kleinanzeigen" />
 	<item drawable="ebidfood" />
 	<item drawable="ebird" />
-	<item drawable="eblan_launcher" />
 	<item drawable="ebookdroid" />
 	<item drawable="eboox" />
 	<item drawable="echo" />
@@ -5223,6 +5222,7 @@
 	<item drawable="eidetic" />
 	<item drawable="eigonotomo" />
 	<item drawable="einkbro" />
+	<item drawable="einstein_launcher" />
 	<item drawable="eka2l1" />
 	<item drawable="eksi_sozluk" />
 	<item drawable="electric_love_festival" />
