add Frank insurance

--- a/app/src/main/res/xml/contributors.xml
+++ b/app/src/main/res/xml/contributors.xml
@@ -435,4 +435,9 @@
         contribution="Icons"
         image="https://avatars.githubusercontent.com/u/21128619"
         link="https://github.com/adil192" />
+    <contributor
+        name="Alice Jacka"
+        contribution="Icons"
+        image="https://avatars.githubusercontent.com/u/36313060"
+        link="https://github.com/non-bin" />
 </resources>
