Add second activity for Binge

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -585,6 +585,7 @@
 	<item component="ComponentInfo{au.com.stan.and/au.com.stan.and.MainActivity}" drawable="stan" />
 	<item component="ComponentInfo{au.com.stan.and/au.com.stan.and.SplashActivity}" drawable="stan" />
 	<item component="ComponentInfo{au.com.streamotion.ares/au.com.streamotion.ares.main.MainActivity}" drawable="binge" />
+	<item component="ComponentInfo{au.com.streamotion.ares/au.com.streamotion.mobile.SplashActivity}" drawable="binge" />
 	<item component="ComponentInfo{au.com.subcard.app/crc643f56eb19e392e7ef.MainActivity}" drawable="subway" />
 	<item component="ComponentInfo{au.com.swyftx/au.com.swyftx.MainActivity}" drawable="swyftx" />
 	<item component="ComponentInfo{au.com.tenplay/au.com.tenplay.mobile.HomeActivity}" drawable="_10_play" />
