added 'carlfully' (me) to contributors

--- a/app/src/main/res/xml/contributors.xml
+++ b/app/src/main/res/xml/contributors.xml
@@ -435,4 +435,9 @@
         contribution="Icons"
         image="https://avatars.githubusercontent.com/u/21128619"
         link="https://github.com/adil192" />
+    <contributor
+        name="carlfully"
+        contribution="Icons"
+        image="https://avatars.githubusercontent.com/u/148474626"
+        link="https://github.com/carlfully" />
 </resources>
