Add lots of icons (#1354)
* add Frank insurance

* Add My NDIS

* Add NXP taginfo and tagwriter

* Add thangs

* Add Goodsam Responder

* Add quinn

* Add luxdelux frequencygenerator

* Add petrolspy

* Add ausphonetowers

* Fix Quinn png size

* Add padding to svgs

* fix icons

* fix petrolspy

---------

Co-authored-by: flameshikari <mail@hexed.pw>

--- a/app/src/main/res/xml/contributors.xml
+++ b/app/src/main/res/xml/contributors.xml
@@ -440,4 +440,9 @@
         contribution="Icons"
         image="https://avatars.githubusercontent.com/u/148474626"
         link="https://github.com/carlfully" />
+    <contributor
+        name="Alice Jacka"
+        contribution="Icons"
+        image="https://avatars.githubusercontent.com/u/36313060"
+        link="https://github.com/non-bin" />
 </resources>
