--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -18526,4 +18526,5 @@
 	<item component="ComponentInfo{zte.com.cn.alarmclock/zte.com.cn.alarmclock.activity.AlarmClockActivity}" drawable="clock" />
 	<item component="ComponentInfo{zte.com.cn.filer/zte.com.cn.filer.FileMgrActivity}" drawable="file_manager" />
 	<item component="ComponentInfo{vn.sevensystem.rewards/vn.sevensystem.rewards.MainActivity}" drawable="_7_eleven" />
+	<item component="ComponentInfo{jp.co.toshiba.famipoint.membership.mobile.android/jp.co.toshiba.famipoint.membership.mobile.android.MainActivity}" drawable="familymart" />
 </resources>
