feat: support com.starbucks.vn (vietnam region starbucks)

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -18527,4 +18527,5 @@
 	<item component="ComponentInfo{zte.com.cn.filer/zte.com.cn.filer.FileMgrActivity}" drawable="file_manager" />
 	<item component="ComponentInfo{vn.sevensystem.rewards/vn.sevensystem.rewards.MainActivity}" drawable="_7_eleven" />
 	<item component="ComponentInfo{jp.co.toshiba.famipoint.membership.mobile.android/jp.co.toshiba.famipoint.membership.mobile.android.MainActivity}" drawable="familymart" />
+	<item component="ComponentInfo{com.starbucks.vn/com.starbucks.vn.MainActivity}" drawable="starbucks" />
 </resources>
