feat: support vietnam region apps for existing icons (#1358)
* feat: support vn.sevensystem.reward (7 eleven vn)

* feat: support jp.co.toshiba.famipoint.membership.mobile.android (familymart vn)

* feat: support com.starbucks.vn (vietnam region starbucks)

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -18525,4 +18525,7 @@
 	<item component="ComponentInfo{zombie.survival.craft.z/ru.kv3dunityext.permissions.MainActivity}" drawable="last_day_on_earth_survival" />
 	<item component="ComponentInfo{zte.com.cn.alarmclock/zte.com.cn.alarmclock.activity.AlarmClockActivity}" drawable="clock" />
 	<item component="ComponentInfo{zte.com.cn.filer/zte.com.cn.filer.FileMgrActivity}" drawable="file_manager" />
+	<item component="ComponentInfo{vn.sevensystem.rewards/vn.sevensystem.rewards.MainActivity}" drawable="_7_eleven" />
+	<item component="ComponentInfo{jp.co.toshiba.famipoint.membership.mobile.android/jp.co.toshiba.famipoint.membership.mobile.android.MainActivity}" drawable="familymart" />
+	<item component="ComponentInfo{com.starbucks.vn/com.starbucks.vn.MainActivity}" drawable="starbucks" />
 </resources>
