--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -37,6 +37,7 @@
 	<item drawable="thangs" />
 	<item drawable="vneid" />
 	<item drawable="wsecu" />
+	<item drawable="sams_club" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -965,6 +966,7 @@
 	<item drawable="runtastic_alt_1" />
 	<item drawable="safespace_alt_1" />
 	<item drawable="sagernet_alt_1" />
+	<item drawable="sams_club_alt_1" />
 	<item drawable="samsung_ar_zone_alt_1" />
 	<item drawable="samsung_galaxy_apps_alt_1" />
 	<item drawable="samsung_galaxy_themes_alt_1" />
