update ComponentInfo for Octopus Energy

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -14095,6 +14095,7 @@
 	<item component="ComponentInfo{enbd.mobilebanking/enbd.mobilebanking.ui.activity.SplashActivity}" drawable="bank" />
 	<item component="ComponentInfo{energy.octopus.octopusenergy.android/mobile.kraken.android.FlapjackMainActivity}" drawable="octopus" />
 	<item component="ComponentInfo{energy.octopus.octopusenergy.android/mobile.kraken.android.OctopusMainActivity}" drawable="octopus" />
+	<item component="ComponentInfo{energy.octopus.octopusenergy.android/energy.octopus.octopusenergy.android.OctopusMainActivity}" drawable="octopus" />
 	<item component="ComponentInfo{enterprises.dating.boo/dating.boo.MainActivity}" drawable="boo" />
 	<item component="ComponentInfo{epapersmart.teamwork/epapersmart.myxteam.activities.MH01_Loading_Activity}" drawable="workdone" />
 	<item component="ComponentInfo{epic.mychart.android/epic.mychart.android.library.prelogin.SplashActivity}" drawable="mychart" />
