--- a/app/src/main/res/xml/contributors.xml
+++ b/app/src/main/res/xml/contributors.xml
@@ -351,6 +351,11 @@
         image="https://avatars.githubusercontent.com/u/150787679"
         link="https://riars.dev/" />
     <contributor
+        name="rozab"
+        contribution="Icons"
+        image="https://avatars.githubusercontent.com/u/35606180"
+        link="https://rozab.dev/" />
+    <contributor
         name="ryeookie"
         contribution="Icons"
         image="https://avatars.githubusercontent.com/u/207253145"
