Add Thunderbird ComponentInfo, Rename broken drawables as alternate icons

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -722,6 +722,7 @@
 	<item drawable="linwood_butterfly_alt_1" />
 	<item drawable="listonic_alt_1" />
 	<item drawable="listonic_alt_2" />
+	<item drawable="litres_alt_1" />
 	<item drawable="lookout_alt_1" />
 	<item drawable="lsposed_manager_alt_1" />
 	<item drawable="lttrs_alt_1" />
@@ -1499,9 +1500,11 @@
 	<item drawable="todoist_sky" />
 	<item drawable="todoist_sunflower" />
 	<item drawable="todoist_tangerine" />
+	<item drawable="tool_box_maxcom_alt_1" />
 	<item drawable="tooly_alt_1" />
 	<item drawable="torrent_search_alt_1" />
 	<item drawable="touchscreen_dead_pixels_repair_alt_1" />
+	<item drawable="touhou_lostword_alt_1" />
 	<item drawable="tower_of_fantasy_alt_1" />
 	<item drawable="traewelldroid_alt_1" />
 	<item drawable="transit_alt" />
@@ -10341,7 +10344,6 @@
 	<item drawable="rcx" />
 	<item drawable="re_equalizer_fx" />
 	<item drawable="reaction_training" />
-	<item drawable="read" />
 	<item drawable="read_chan" />
 	<item drawable="read_only_memories_type_m" />
 	<item drawable="read_you" />
@@ -12271,7 +12273,6 @@
 	<item drawable="tonkeeper" />
 	<item drawable="tonuino" />
 	<item drawable="toogoodtogo" />
-	<item drawable="tool_box" />
 	<item drawable="tool_box_maxcom" />
 	<item drawable="tool_shells" />
 	<item drawable="tooly" />
@@ -12310,7 +12311,6 @@
 	<item drawable="touch_the_notch" />
 	<item drawable="touchretouch" />
 	<item drawable="touchscreen_dead_pixels_repair" />
-	<item drawable="touhou" />
 	<item drawable="touhou_lostword" />
 	<item drawable="towaste" />
 	<item drawable="tower_collector" />
